--- a/contact.css
+++ b/contact.css
@@ -4,19 +4,8 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 /* Style the header */
-
-.header {
-  background-color: #f1f1f1;
-  padding: 30px;
-  text-align: center;
-  font-size: 35px;
-}
-
+÷
 /* Container for flexboxes */
 
 .row {
@@ -60,7 +49,7 @@ body {
 
 @media (max-width: 600px) {
   .row {
-      -webkit-flex-direction: column;
-      flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-direction: column;
   }
 }
