--- a/main.css
+++ b/main.css
@@ -3,11 +3,46 @@
 /* add this to all html files */
 /* used for general styling, ie background colors & such that is used throughout all the files */
 
+* {
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+html {
+    background-color: #f89f38;
+}
+
+
+body {
+    margin: auto;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 95%;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    box-shadow: 0 4px 14px 0 black, 0 6px 26px 0 black;
+    background-color: #ddd;
+}
+
+img {
+    width: 30%;
+    display: block;
+    margin: auto;
+}
+
+header {
+    display: block;
+    background-image: linear-gradient(#f7931d, #f5611d);
+    /* background-color: #f7931d; */
+    /* background-image: url("NWC.jpg"); */
+}
+
 /* Style the top navigation bar */
 
 .topnav {
     overflow: hidden;
     background-color: #333;
+    height: 60px;
+    border-top: 1px solid black;
 }
 
 /* Style the topnav links */
@@ -17,8 +52,9 @@
     display: block;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 21px 50px;
     text-decoration: none;
+    width: 273.6px;
 }
 
 /* Change color on hover */
