--- a/main.css
+++ b/main.css
@@ -8,19 +8,19 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-html {
+/* html {
     background-color: #f89f38;
-}
+} */
 
 
 body {
     margin: auto;
     font-family: Arial, Helvetica, sans-serif;
-    width: 95%;
+    width: 100%;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
-    box-shadow: 0 4px 14px 0 black, 0 6px 26px 0 black;
-    background-color: #ddd;
+    /* box-shadow: 0 4px 14px 0 black, 0 6px 26px 0 black; */
+    /* background-color: #ddd; */
 }
 
 img {
@@ -63,14 +63,14 @@ footer {
     text-align: center;
     padding: 21px 50px;
     text-decoration: none;
-    width: 273.6px;
+    width: 288px;
     /* transition: .3s ease-in, color .8s; */
 }
 
 /* Change color on hover */
 
 .topnav a:hover {
-    background-color: #ddd;
+    background-color: white;
     color: black;
     transition: .5s ease-in, color .10s;
     /* box-shadow: inset 0 0px 10px black; */
